--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2"
